added final form lik

--- a/registration.html
+++ b/registration.html
@@ -65,24 +65,32 @@
                     <h2 class="text-center">PRESENTEE</h2>
                     <div class="content-gray" style="display: block;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform"><button>PRESENTEE REGISTRATION
-                                    FORM</button></a></p>
+                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>PRESENTEE REGISTRATION
+                                    FORM</button></a>
+                        </p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an
                             acceptance mail of abstract within two weeks with a
                             specific
                             Abstract ID (ICABB ID)</p>
                         <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
                                 href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
+                        <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                                target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform?usp=sf_link"><button>FINAL
+                                    REGISTRATION FORM</button></a></p>
                     </div>
                     <h2 class="text-center">ATTENDEE</h2>
                     <div class="content-gray" style="display: block;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform"><button>ATTENDEE REGISTRATION
-                                    FORM</button></a></p>
+                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>ATTENDEE REGISTRATION
+                                    FORM</button></a>
+                        </p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             You will receive a confirmation mail.</p>
                         <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
                                 href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
+                        <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                                target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform?usp=sf_link"><button>FINAL
+                                    REGISTRATION FORM</button></a></p>
                     </div>
 
                 </div>
@@ -105,7 +113,8 @@
                     <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i
+                            class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
