updated brochure and last dates

--- a/registration-fees.html
+++ b/registration-fees.html
@@ -100,6 +100,7 @@
                     </div>
                     <div class="container">
                         <h2 class="text-center">PAYMENT METHOD</h2>
+                        <p style="color: red; text-align: center; text-transform: uppercase; font-weight: bold;">Please pay registration fee using Bank account via NEFT only. UPI payments are not accepted.</p>
                         <p><u><b>For Online Transaction</b></u></p>
                         <p>The Participant/Author can pay the registration fee through Funds Transfer. The Funds
                             Transfer may be made to the following Bank</p>
