--- a/registration-fees.html
+++ b/registration-fees.html
@@ -117,6 +117,10 @@
                                     <td style="text-align: center;">ICICI BANK LTD</td>
                                 </tr>
                                 <tr>
+                                    <th scope="row">Branch Name</th>
+                                    <td style="text-align: center;">CMS Mumbai</td>
+                                </tr>
+                                <tr>
                                     <th scope="row">Account Type</th>
                                     <td style="text-align: center;">Savings</td>
                                 </tr>
