--- a/about.html
+++ b/about.html
@@ -101,11 +101,11 @@
                         <tbody>
                             <tr>
                                 <th>ABSTRACT SUBMISSION DEADLINE</th>
-                                <th>December 31th, 2020</th>
+                                <th>December 07th January, 2021</th>
                             </tr>
                             <tr>
                                 <th>REGISTRATION DEADLINE</th>
-                                <th>January 7th, 2020</th>
+                                <th>January 15th, 2021</th>
                             </tr>
                             <tr>
                                 <th>CONFERENCE DATES</th>
