--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                         <tbody>
                             <tr>
                                 <th>ABSTRACT SUBMISSION DEADLINE</th>
-                                <th>December 07th January, 2021</th>
+                                <th>January 07th, 2021</th>
                             </tr>
                             <tr>
                                 <th>REGISTRATION DEADLINE</th>
