--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <p class="power" href="#sponsors">
             28<sup>th</sup> January - 30<sup>th</sup> January 2021
           </p>
-          <p class="power" href="#sponsors">VIRTUAL</p>
+          <p class="power" href="#sponsors">VIRTUAL test</p>
         </div>
       </div>
       <div class="main-wrap">
