--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
           <a href="ICABB-2021-Brochure.pdf" target="_blank"
             ><button>VIEW BROCHURE</button></a
           >
+          <a href="JournalPartner.html"><button>JOURNAL PARTNERS</button></a>
           <p class="power" href="#sponsors">
             28<sup>th</sup> January - 30<sup>th</sup> January 2021
           </p>
@@ -241,13 +242,13 @@
               </div>
             </div>
             <div class="judges img">
-              <img src="assets/speaker3.jpg" />
+              <img src="assets/speaker12.jpg" />
               <div class="team-content">
-                <h1>Prof. Neena Capalash</h1>
+                <h1>Prof. Subhash Chand</h1>
                 <br />
                 <p>
-                  Professor, Department of Biotechnology, Panjab University,
-                  Chandigarh.
+                  Professor Emeritus, Department of Biochemical Engineering and
+                  Biotechnology, IIT Delhi
                 </p>
               </div>
             </div>
@@ -343,69 +344,55 @@
           </div>
         </div>
       </div>
-      <!-- <div class="main-wrap">
-            <div
-               class="content rellax"
-               data-rellax-speed="-4"
-               data-rellax-percentage="0.5"
-               >
-               <h1
-                  class="spons_numb"
-                  style="
-                  background: linear-gradient(0deg, #145dbb, #28b9ee);
-                  background-clip: border-box;
-                  background-clip: border-box;
-                  -webkit-background-clip: text;
-                  -webkit-text-fill-color: transparent;
-                  "
-                  >
-                  SPONSORS
-               </h1>
-               <div class="head">
-                  <p>AND MORE</p>
-                  <div class="line"></div>
-               </div>
-               <div class="sponsors">
-                  <div class="associate-sponsors">
-                     <div class="spon-title p-1">Associate Sponsors</div>
-                     <a href="#"
-                        ><img class="sponsor-img" src="assets/sponsor1.png" alt=""
-                        /></a>
-                     <a href="#"
-                        ><img class="sponsor-img" src="assets/sponsor2.png" alt=""
-                        /></a>
-                     <a href="#"
-                        ><img class="sponsor-img" src="assets/sponsor3.png" alt=""
-                        /></a>
-                     <a href="#"
-                        ><img class="sponsor-img" src="assets/sponsor4.png" alt=""
-                        /></a>   
-                  </div>
-               </div>
+      <div class="main-wrap">
+        <div class="content">
+          <h1
+            class="spons_numb"
+            style="
+              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background-clip: border-box;
+              background-clip: border-box;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+            "
+          >
+            SPONSORS
+          </h1>
+          <div class="head">
+            <p></p>
+            <div class="line"></div>
+          </div>
+          <div class="sponsors">
+            <div class="associate-sponsors">
+              <!-- <div class="spon-title p-1">Associate Sponsors</div> -->
+              <a href="#"
+                ><img class="sponsor-img" src="assets/Laczene.png" alt=""
+              /></a>
+              <a href="#"
+                ><img class="sponsor-img" src="assets/Promega.png" alt=""
+              /></a>
             </div>
-            <div class="title">SPONSORS</div>
-            <div class="collab">
-               <a href="mailto:dhamasunny98@gmail.com"
-                  >
-                  COLLAB WITH <span>US</span>
-                  <div class="line"></div
-                     >
-               </a>
-            </div>
-            <div
-               class="shape shape-5 rellax"
-               data-rellax-speed="5"
-               data-rellax-percentage="0.5"
-               >
-               <img src="img/blue/blueShapeSide2.png" />
-            </div>
-         </div> -->
+          </div>
+        </div>
+        <div class="title">SPONSORS</div>
+        <div class="collab">
+          <a href="mailto:reema.gabrani@jiit.ac.in">
+            COLLAB WITH <span>US</span>
+            <div class="line"></div>
+          </a>
+        </div>
+        <div
+          class="shape shape-5 rellax"
+          data-rellax-speed="5"
+          data-rellax-percentage="0.5"
+        >
+          <img src="img/blue/blueShapeSide2.png" />
+        </div>
+      </div>
 
       <!-- PAST EVENTS -->
       <div class="main-wrap">
-        <div
-          class="content"
-        >
+        <div class="content">
           <h1
             style="
               background: linear-gradient(0deg, #145dbb, #28b9ee);
@@ -496,86 +483,153 @@
           </div>
         </div>
         <div class="title">PAST EVENTS</div>
+        <div class="shape shape-4">
+          <img src="img/blue/blueShapeSide.png" />
+        </div>
+      </div>
+      <div class="main-wrap">
+        <div class="content">
+          <h1
+            style="
+              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background-clip: border-box;
+              background-clip: border-box;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+            "
+          >
+            10.
+          </h1>
+          <div class="head">
+            <p>FAQs</p>
+            <div class="line"></div>
+          </div>
+          <div class="track">
+            <div class="track-wrap">
+              <h1>How many posters can I present in a given single payment?</h1>
+              <p>
+                You are allowed to present a maximum of 2 papers and you’ll
+                receive the certificates for the same. If in case you are
+                willing to present more than 2 papers or you have your name in
+                other papers as well for which you wish to receive the
+                certificate, you’ll have to go for a second payment.
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>What is the format of the poster?</h1>
+              <p>
+                The details for the format of poster are given in the guidelines
+                section.
+                <a href="https://icabbjiit.com/guidelines" target="_blank"
+                  >Click here</a
+                >
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>What is the format of the abstract?</h1>
+              <p>
+                The details for the format of abstract are given in the
+                guidelines section.
+                <a href="https://icabbjiit.com/guidelines" target="_blank"
+                  >Click here</a
+                >
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>What will be the duration for poster/oral presentation?</h1>
+              <p>
+                For duration of the presentation and other details kindly go
+                through the guidelines section.
+                <a href="https://icabbjiit.com/guidelines" target="_blank"
+                  >Click here</a
+                >
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>What all proceedings an attendee is entitled to join?</h1>
+              <p>
+                All the attendees will have access to all the presentations,
+                sessions and the talks by the keynote speakers throughout the
+                conference.
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>What is the payment procedure?</h1>
+              <p>
+                After you register you will receive a confirmation mail which
+                will contain your payment amount, the link for the payment and
+                your participant ID.
+              </p>
+              <p>
+                In case of poster/oral presentations, each participant is
+                required to make the payment individually.
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>How will I receive my confirmation for payment?</h1>
+              <p>
+                All participants will receive confirmation of payment through
+                mail.
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>
+                By when will I receive my participation/appreciation
+                certificate?
+              </h1>
+              <p>
+                All participants and winners will receive their respective
+                certificates within 2-3 working days post conference.
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>By when will I receive the conference schedule?</h1>
+              <p>
+                The schedule of the conference will be available on the website
+                and you’ll receive the copy of the same on your registered email
+                ID 2 days before the conference i.e. 26 th January 2021.
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>By when will I receive the conference proceedings?</h1>
+              <p>
+                The conference proceedings will be provided to you on your
+                registered email ID post conference.
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>In which journal paper will my abstract be published?</h1>
+              <p>
+                We are planning to publish the conference proceedings (only
+                abstracts) in esteemed journal ‘Asian Journal of Pharmaceutical
+                and Clinical Research’.
+              </p>
+            </div>
+            <div class="track-wrap">
+              <h1>
+                Is there any chance that I can publish my full-length paper?
+              </h1>
+              <p>
+                Yes, we are planning to publish full-length manuscripts as
+                mentioned below:
+              </p>
+              <p>
+                1. Scopus indexed ‘Current Trends in Biotechnology and Pharmacy’
+              </p>
+              <p>2. The Pharmaceutical and Chemical Journal</p>
+              <p>The publishing of paper is subject to review and payment.</p>
+            </div>
+          </div>
+        </div>
+        <div class="title">FAQ</div>
         <div
-          class="shape shape-4"
-         
+          class="shape shape-4 rellax"
+          data-rellax-speed="5"
+          data-rellax-percentage="0.5"
         >
           <img src="img/blue/blueShapeSide.png" />
         </div>
       </div>
-      <!-- <div class="main-wrap">
-            <div
-               class="content rellax"
-               data-rellax-speed="-4"
-               data-rellax-percentage="0.5"
-               >
-               <h1
-                  style="
-                  background: linear-gradient(0deg, #145dbb, #28b9ee);
-                  background-clip: border-box;
-                  background-clip: border-box;
-                  -webkit-background-clip: text;
-                  -webkit-text-fill-color: transparent;
-                  "
-                  >
-                  10.
-               </h1>
-               <div class="head">
-                  <p>FAQs</p>
-                  <div class="line"></div>
-               </div>
-               <div class="track">
-                  <div class="track-wrap">
-                     <h1>Quest 1?</h1>
-                     <p>Ans 1.</p>
-                  </div>
-                  <div class="track-wrap">
-                     <h1>Ques 2?</h1>
-                     <p>
-                        Ans 2.
-                     </p>
-                  </div>
-                  <div class="track-wrap">
-                     <h1>Quest 1?</h1>
-                     <p>Ans 1.</p>
-                  </div>
-                  <div class="track-wrap">
-                     <h1>Ques 2?</h1>
-                     <p>
-                        Ans 2.
-                     </p>
-                  </div>
-                  <div class="track-wrap">
-                     <h1>Quest 1?</h1>
-                     <p>Ans 1.</p>
-                  </div>
-                  <div class="track-wrap">
-                     <h1>Ques 2?</h1>
-                     <p>
-                        Ans 2.
-                     </p>
-                  </div>
-                  <div class="track-wrap">
-                     <h1>Quest 1?</h1>
-                     <p>Ans 1.</p>
-                  </div>
-                  <div class="track-wrap">
-                     <h1>Ques 2?</h1>
-                     <p>
-                        Ans 2.
-                     </p>
-                  </div>
-               </div>
-            </div>
-            <div class="title">FAQ</div>
-            <div
-               class="shape shape-4 rellax"
-               data-rellax-speed="5"
-               data-rellax-percentage="0.5"
-               >
-               <img src="img/blue/blueShapeSide.png" />
-            </div>
-         </div> -->
       <footer>
         <img src="img/cloud.png" />
         <div class="footer">
