--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
           <p class="power" href="#sponsors">
             28<sup>th</sup> January - 30<sup>th</sup> January 2021
           </p>
+          <div class="sign">
+            <p class="power" style="text-transform: uppercase" href="#sponsors">
+              Abstract Submission by 10<sup>th</sup> January | Final Payment by
+              15<sup>th</sup> January
+            </p>
+          </div>
+
           <p class="power" href="#sponsors">VIRTUAL</p>
         </div>
       </div>
