updated landing flash

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
           <p class="power" href="#sponsors">
             28<sup>th</sup> January - 30<sup>th</sup> January 2021
           </p>
-          <div class="sign">
+          <h2 class="sign">
             <p class="power" style="text-transform: uppercase" href="#sponsors">
               Abstract Submission by 10<sup>th</sup> January | Final Payment by
               15<sup>th</sup> January
             </p>
-          </div>
+          </h2>
 
           <p class="power" href="#sponsors">VIRTUAL</p>
         </div>
