--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
           <a href="ICABB-2021-Brochure.pdf" target="_blank"
             ><button>VIEW BROCHURE</button></a
           >
+          <a href="schedule.html"><button>SCHEDULE</button></a>
           <a href="JournalPartner.html"><button>JOURNAL PARTNERS</button></a>
           <p class="power" href="#sponsors">
             28<sup>th</sup> January - 30<sup>th</sup> January 2021
           </p>
           <h2 class="sign">
             <p class="power" style="text-transform: uppercase" href="#sponsors">
-              Abstract Submission by 10<sup>th</sup> January | Final Payment by
-              15<sup>th</sup> January
+              <span style="color: red">Abstract Submission closed</span>
             </p>
           </h2>
 
