navbar changed, speakers remove from home page

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 </head>
 
 <body>
-  <lines>
+  <!-- <lines>
     <div class="wrap"></div>
     <div class="wrap"></div>
     <div class="wrap"></div>
     <div class="wrap"></div>
     <div class="wrap"></div>
-  </lines>
+  </lines> -->
   <content>
     <div class="header">
       <img class="bg-main" src="assets/Live-Wave-Background.svg" alt="" />
@@ -64,23 +64,33 @@
         <img class="logo" src="assets/logo.png" alt="" />
         <img class="logo1" src="assets/logo1.png" alt="" />
         <div class="main-header-div">
-          <p style="margin-bottom: 0; font-size: 2rem">
-            INTERNATIONAL CONFERENCE
+          <p style="margin-bottom: 0; font-size: 2.5rem; font-family: 'Roboto Slab', serif;">
+            INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
           </p>
-          <p style="margin-bottom: 0; font-size: 2rem">ON</p>
-          <p style="margin-bottom: 0; font-size: 2rem">
-            ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY - (ICABB)
-          </p>
-          <p style="margin-bottom: 0; font-size: 2rem">2022</p>
+          <!-- <p style="margin-bottom: 0; font-size: 2rem">ON</p> -->
+          <!-- <p style="margin-bottom: 0; font-size: 2rem">
+
+          </p> -->
+          <p style="margin-bottom: 0; font-size: 2rem; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
+
         </div>
-        <a href="registration"><button>REGISTER</button></a>
-        <a href="guidelines"><button>GUIDELINES</button></a>
-        <a href="ICABB-2021-Brochure.pdf" target="_blank"><button>VIEW BROCHURE</button></a>
-        <a href="schedule.html"><button>SCHEDULE</button></a>
-        <a href="JournalPartner.html"><button>JOURNAL PARTNERS</button></a>
-        <a href="#"><button>SPEAKERS</button></a>
-        <a href="#"><button>XYZ</button></a>
-        <p class="power" href="#sponsors">
+        <div class="navigation">
+          <div class="navtab">
+            <ul>
+              <li class="list-item"><a class="navbar" href="registration">REGISTER</a></li>
+              <li class="list-item"><a class="navbar" href="guidelines">GUIDELINES</a></li>
+              <li class="list-item"><a class="navbar" href="ICABB-2021-Brochure.pdf" target="_blank">VIEW BROCHURE</a></li>
+              <li class="list-item"><a class="navbar" href="schedule.html">SCHEDULE</a></li>
+              <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
+              <li class="list-item"><a class="navbar" href="speakers.html">SPEAKERS</a></li>
+            </ul>
+          </div>
+
+
+
+        </div>
+
+        <!-- <p class="power" href="#sponsors">
           28<sup>th</sup> January - 30<sup>th</sup> January 2022
         </p>
         <h2 class="sign">
@@ -89,11 +99,13 @@
           </p>
         </h2>
 
-        <p class="power" href="#sponsors">VIRTUAL</p>
+        <p class="power" href="#sponsors">VIRTUAL</p> -->
       </div>
     </div>
+
+<!--  -->
     <div class="main-wrap">
-      <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
+      <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" >
         <h1 style="
               background: linear-gradient(0deg, #145dbb, #28b9ee);
               background-clip: border-box;
@@ -170,7 +182,7 @@
       </div>
     </div>
 
-    <div class="main-wrap">
+    <!-- <div class="main-wrap">
       <div class="title">Speakers</div>
       <div class="content">
         <h1 style="
@@ -310,41 +322,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="main-wrap">
-      <div class="content">
-        <h1 class="spons_numb" style="
-              background: linear-gradient(0deg, #145dbb, #28b9ee);
-              background-clip: border-box;
-              background-clip: border-box;
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;
-            ">
-          SPONSORS
-        </h1>
-        <div class="head">
-          <p></p>
-          <div class="line"></div>
-        </div>
-        <div class="sponsors">
-          <div class="associate-sponsors">
-            <!-- <div class="spon-title p-1">Associate Sponsors</div> -->
-            <a href="#"><img class="sponsor-img" src="assets/Laczene.png" alt="" /></a>
-            <a href="#"><img class="sponsor-img" src="assets/Promega.png" alt="" /></a>
-          </div>
-        </div>
-      </div>
-      <div class="title">SPONSORS</div>
-      <div class="collab">
-        <a href="mailto:reema.gabrani@jiit.ac.in">
-          COLLAB WITH <span>US</span>
-          <div class="line"></div>
-        </a>
-      </div>
-      <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
-        <img src="img/blue/blueShapeSide2.png" />
-      </div>
-    </div>
+    </div> -->
+
 
     <!-- PAST EVENTS -->
     <div class="main-wrap">
@@ -401,6 +380,42 @@
         <img src="img/blue/blueShapeSide.png" />
       </div>
     </div>
+
+    <div class="main-wrap">
+      <div class="content">
+        <h1 class="spons_numb" style="
+              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background-clip: border-box;
+              background-clip: border-box;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+            ">
+          SPONSORS
+        </h1>
+        <div class="head">
+          <p></p>
+          <div class="line"></div>
+        </div>
+        <div class="sponsors">
+          <div class="associate-sponsors">
+            <!-- <div class="spon-title p-1">Associate Sponsors</div> -->
+            <!-- <a href="#"><img class="sponsor-img" src="assets/Laczene.png" alt="" /></a>
+            <a href="#"><img class="sponsor-img" src="assets/Promega.png" alt="" /></a> -->
+          </div>
+        </div>
+      </div>
+      <div class="title">SPONSORS</div>
+      <div class="collab">
+        <a href="mailto:reema.gabrani@jiit.ac.in">
+          COLLAB WITH <span>US</span>
+          <div class="line"></div>
+        </a>
+      </div>
+      <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
+        <img src="img/blue/blueShapeSide2.png" />
+      </div>
+    </div>
+
     <div class="main-wrap">
       <div class="content">
         <h1 style="
