--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 </head>
 
 <body>
-  <!-- <lines>
+  <lines>
     <div class="wrap"></div>
     <div class="wrap"></div>
     <div class="wrap"></div>
     <div class="wrap"></div>
     <div class="wrap"></div>
-  </lines> -->
+  </lines>
   <content>
     <div class="header">
       <img class="bg-main" src="assets/Live-Wave-Background.svg" alt="" />
