--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <!-- <p style="margin-bottom: 0; font-size: 2rem">
 
           </p> -->
-          <p style="margin-bottom: 0; font-size: 2rem; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
+          <p style="margin-bottom: 0; font-size: 2.5rem; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
 
         </div>
         <div class="navigation">
@@ -103,6 +103,61 @@
       </div>
     </div>
 
+
+    <div class="main-wrap">
+      <div class="content">
+        <h1 style="
+              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background-clip: border-box;
+              background-clip: border-box;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+            ">
+          PAST EVENTS
+        </h1>
+        <div class="head">
+          <p></p>
+          <div class="line"></div>
+        </div>
+        <div class="container">
+          <div class="car-container">
+            <div class="car-container-inner">
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="assets/c7.jpeg" class="d-block w-100 car-img" alt="..." />
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/c8.jpeg" class="d-block w-100 car-img" alt="..." />
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/c9.jpeg" class="d-block w-100 car-img" alt="..." />
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/c10.jpeg" class="d-block w-100 car-img" alt="..." />
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/c11.jpeg" class="d-block w-100 car-img" alt="..." />
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="title">PAST EVENTS</div>
+      <div class="shape shape-4">
+        <img src="img/blue/blueShapeSide.png" />
+      </div>
+    </div>
 <!--  -->
     <div class="main-wrap">
       <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" >
@@ -172,6 +227,8 @@
                   </ul> -->
         </div>
       </div>
+
+
       <div class="title">ABOUT</div>
       <div class="juggad">
         REGISTER <span>NOW</span>
@@ -326,7 +383,7 @@
 
 
     <!-- PAST EVENTS -->
-    <div class="main-wrap">
+    <!-- <div class="main-wrap">
       <div class="content">
         <h1 style="
               background: linear-gradient(0deg, #145dbb, #28b9ee);
@@ -379,7 +436,7 @@
       <div class="shape shape-4">
         <img src="img/blue/blueShapeSide.png" />
       </div>
-    </div>
+    </div> -->
 
     <div class="main-wrap">
       <div class="content">
